<resources>
    <string name="app_name">LegoControlDHBW</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gyro_mode">GyroModeActivity</string>
    <string name="switchLabel">Automatic dodge </string>
    <string name="forward">Forward</string>
    <string name="turn_left">Turn Left</string>
    <string name="gyro_mode">Gyro Mode</string>
    <string name="turn_right">Turn Right</string>
    <string name="backward">Backward</string>
    <string name="exit_gyro_mode">Exit Gyro Mode</string>
    <string name="recall">Recall</string>
    <string name="update_count">Update count:</string>
    <string name="_0">0</string>
    <string name="direction_vector_array">Direction vector array:</string>
    <string name="x_axis">x-axis:</string>
    <string name="y_axis">y-axis:</string>
    <string name="z_axis">z-axis:</string>
    <string name="debug_panel">Debug panel</string>
    <string name="tilt_your_smartphone_to_control_the_vehicle">Tilt your smartphone to control the vehicle!</string>
</resources>
