<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_gyro_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00AABA"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dhbw.legosteuerung.GyroModeActivity"
    tools:showIn="@layout/activity_gyro_mode">

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gyro_mode"
                android:textAlignment="center"
                android:textColor="?android:attr/actionMenuTextColor"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tilt_your_smartphone_to_control_the_vehicle"
                android:textAlignment="center" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/buttonRecallGyro"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:longClickable="true"
                android:text="@string/recall"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/switchLabel" />
                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/switchToggleAutomatedDodgeGyro"
                    android:checked="true"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="switchToMainMode"
                android:text="@string/exit_gyro_mode" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debug_panel"
                android:textAlignment="center"
                android:textColor="?android:attr/actionMenuTextColor"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update_count"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewUpdateCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textAlignment="center" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/direction_vector_array"
                android:textAlignment="center" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewArray0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/x_axis"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewArray8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewArray1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/y_axis"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewArray9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewArray2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/z_axis"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewArray10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textViewSentG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
