<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00AABA"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dhbw.legosteuerung.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switchLabel"
                />
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchToggleAutomatedDodge"
                android:checked="true"/>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonRecallMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:longClickable="true"
                android:text="@string/recall" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonForward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:longClickable="true"
                android:text="@string/forward" />

            <Space
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:longClickable="true"
                android:text="@string/turn_left" />

            <Button
                android:id="@+id/buttonGyroMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:longClickable="true"
                android:onClick="switchToGyroMode"
                android:text="@string/gyro_mode" />

            <Button
                android:id="@+id/buttonRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:longClickable="true"
                android:text="@string/turn_right" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonBackward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:longClickable="true"
                android:text="@string/backward" />

            <Space
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewSent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:textAlignment="center" />

    </LinearLayout>

</RelativeLayout>
